--- a/src/gui/ui/addressbookdialog.ui
+++ b/src/gui/ui/addressbookdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Select address</string>
+   <string>选择地址</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -35,7 +35,7 @@
      <item>
       <widget class="QPushButton" name="m_okButton">
        <property name="text">
-        <string>Choose</string>
+        <string>选择</string>
        </property>
       </widget>
      </item>
