--- a/src/gui/ui/changepassworddialog.ui
+++ b/src/gui/ui/changepassworddialog.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Change password</string>
+   <string>修改密码</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="4" column="1">
@@ -38,7 +38,7 @@
       <bool>false</bool>
      </property>
      <property name="text">
-      <string>Ok</string>
+      <string>确定</string>
      </property>
      <property name="default">
       <bool>true</bool>
@@ -55,7 +55,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
-      <string>Old password:</string>
+      <string>旧密码:</string>
      </property>
     </widget>
    </item>
@@ -69,7 +69,7 @@
    <item row="4" column="2">
     <widget class="QPushButton" name="m_cancelButton">
      <property name="text">
-      <string>Cancel</string>
+      <string>取消</string>
      </property>
     </widget>
    </item>
@@ -82,7 +82,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>New password:</string>
+      <string>新密码:</string>
      </property>
     </widget>
    </item>
@@ -108,7 +108,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Confirm:</string>
+      <string>确认:</string>
      </property>
     </widget>
    </item>
@@ -118,7 +118,7 @@
       <string notr="true">color: #ff0000; font: 11px;</string>
      </property>
      <property name="text">
-      <string>Password not confirmed</string>
+      <string>密码没有确认</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
