--- a/src/gui/ui/newaddressdialog.ui
+++ b/src/gui/ui/newaddressdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>New address</string>
+   <string>新地址</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
@@ -23,7 +23,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Label:</string>
+      <string>标签:</string>
      </property>
     </widget>
    </item>
@@ -49,7 +49,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Address:</string>
+      <string>地址:</string>
      </property>
     </widget>
    </item>
@@ -79,7 +79,7 @@
       <bool>true</bool>
      </property>
      <property name="text">
-      <string>Ok</string>
+      <string>确定</string>
      </property>
      <property name="default">
       <bool>true</bool>
@@ -89,7 +89,7 @@
    <item row="2" column="3">
     <widget class="QPushButton" name="m_cancelButton">
      <property name="text">
-      <string>Cancel</string>
+      <string>取消</string>
      </property>
     </widget>
    </item>
