--- a/src/gui/ui/newpassworddialog.ui
+++ b/src/gui/ui/newpassworddialog.ui
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Enter password</string>
+   <string>输入密码</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="3" column="1">
@@ -26,7 +26,7 @@
       <bool>false</bool>
      </property>
      <property name="text">
-      <string>Ok</string>
+      <string>确定</string>
      </property>
      <property name="default">
       <bool>true</bool>
@@ -36,7 +36,7 @@
    <item row="3" column="2">
     <widget class="QPushButton" name="m_cancelButton">
      <property name="text">
-      <string>Cancel</string>
+      <string>取消</string>
      </property>
     </widget>
    </item>
@@ -49,7 +49,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Password:</string>
+      <string>密码:</string>
      </property>
     </widget>
    </item>
@@ -82,7 +82,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Confirm:</string>
+      <string>确认:</string>
      </property>
     </widget>
    </item>
@@ -92,7 +92,7 @@
       <string notr="true">color: #ff0000; font: 11px;</string>
      </property>
      <property name="text">
-      <string>Password not confirmed</string>
+      <string>密码没有确认</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
