--- a/src/gui/ui/overviewframe.ui
+++ b/src/gui/ui/overviewframe.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Frame</string>
+   <string>帧</string>
   </property>
   <property name="frameShape">
    <enum>QFrame::StyledPanel</enum>
@@ -91,7 +91,7 @@
       <item row="4" column="0">
        <widget class="QLabel" name="label_6">
         <property name="text">
-         <string>Total:</string>
+         <string>总计:</string>
         </property>
        </widget>
       </item>
@@ -111,21 +111,21 @@
          </font>
         </property>
         <property name="text">
-         <string>Wallet</string>
+         <string>钱包</string>
         </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>Unconfirmed:</string>
+         <string>未确认:</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Balance:</string>
+         <string>盈余:</string>
         </property>
        </widget>
       </item>
@@ -227,7 +227,7 @@
            </font>
           </property>
           <property name="text">
-           <string>Recent transactions</string>
+           <string>最近交易</string>
           </property>
          </widget>
         </item>
