--- a/src/gui/ui/passworddialog.ui
+++ b/src/gui/ui/passworddialog.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Enter password</string>
+   <string>输入密码</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="1" column="1" colspan="2">
@@ -42,7 +42,7 @@
    <item row="3" column="2">
     <widget class="QPushButton" name="m_cancelButton">
      <property name="text">
-      <string>Cancel</string>
+      <string>取消</string>
      </property>
     </widget>
    </item>
@@ -55,7 +55,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Password:</string>
+      <string>密码:</string>
      </property>
     </widget>
    </item>
@@ -65,7 +65,7 @@
       <bool>true</bool>
      </property>
      <property name="text">
-      <string>Ok</string>
+      <string>确定</string>
      </property>
      <property name="default">
       <bool>true</bool>
@@ -84,7 +84,7 @@
       <string notr="true">color: #ff0000; font: 11px;</string>
      </property>
      <property name="text">
-      <string>Wrong password</string>
+      <string>密码错误</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
