--- a/src/gui/ui/receiveframe.ui
+++ b/src/gui/ui/receiveframe.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Frame</string>
+   <string>帧</string>
   </property>
   <property name="frameShape">
    <enum>QFrame::StyledPanel</enum>
@@ -25,7 +25,7 @@
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Address:</string>
+        <string>地址:</string>
        </property>
       </widget>
      </item>
