--- a/src/gui/ui/sendframe.ui
+++ b/src/gui/ui/sendframe.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Frame</string>
+   <string>帧</string>
   </property>
   <property name="frameShape">
    <enum>QFrame::StyledPanel</enum>
@@ -100,7 +100,7 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Anonimity level:</string>
+        <string>匿名程度:</string>
        </property>
       </widget>
      </item>
@@ -123,7 +123,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label_6">
        <property name="text">
-        <string>PaymentID:</string>
+        <string>支付ID:</string>
        </property>
       </widget>
      </item>
@@ -165,7 +165,7 @@
      <item>
       <widget class="QPushButton" name="m_sendButton">
        <property name="text">
-        <string>Send</string>
+        <string>发送</string>
        </property>
        <property name="icon">
         <iconset resource="../../resources.qrc">
@@ -176,7 +176,7 @@
      <item>
       <widget class="QPushButton" name="m_clearAllButton">
        <property name="text">
-        <string>Clear All</string>
+        <string>清空</string>
        </property>
        <property name="icon">
         <iconset resource="../../resources.qrc">
@@ -187,7 +187,7 @@
      <item>
       <widget class="QPushButton" name="m_addRecipientButton">
        <property name="text">
-        <string>Add Recipient</string>
+        <string>添加接收方</string>
        </property>
        <property name="icon">
         <iconset resource="../../resources.qrc">
@@ -211,7 +211,7 @@
      <item>
       <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>Balance:</string>
+        <string>盈余:</string>
        </property>
       </widget>
      </item>
