--- a/src/gui/ui/transactionframe.ui
+++ b/src/gui/ui/transactionframe.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Frame</string>
+   <string>帧</string>
   </property>
   <property name="autoFillBackground">
    <bool>true</bool>
